--- a/The-Foundation-Certification/Odin-Recipes/index.html
+++ b/The-Foundation-Certification/Odin-Recipes/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lasagana Recipes</title>
+    <title>The Odin Project</title>
   </head>
 
   <body>
-    <h1></h1>
+    <h1>Odin Recipes</h1>
   </body>
 </html>
